@@ -1921,7 +1921,7 @@ $cfg['TrustedProxies'] =
     <dd>The style used for the pointer in the navi frame.
         See <code>themes/themename/layout.inc.php</code>.</dd>
 
-    <dt id="cfg_LeftPointerEnable">$cfg['LeftPointerEnable'] boolean</dt>
+    <dt id="cfg_NavigationTreePointerEnable">$cfg['NavigationTreePointerEnable'] boolean</dt>
     <dd>A value of <code>TRUE</code> activates the navi pointer.</dd>
 
     <dt id="cfg_Border">$cfg['Border'] integer</dt>
