@@ -279,8 +279,6 @@ $strConfigLeftLogoLink_desc = __('URL where logo in the navigation frame will po
 $strConfigLeftLogoLink_name = __('Logo link URL');
 $strConfigLeftLogoLinkWindow_desc = __('Open the linked page in the main window ([kbd]main[/kbd]) or in a new one ([kbd]new[/kbd])');
 $strConfigLeftLogoLinkWindow_name = __('Logo link target');
-$strConfigLeftPointerEnable_desc = __('Highlight server under the mouse cursor');
-$strConfigLeftPointerEnable_name = __('Enable highlighting');
 $strConfigLeftRecentTable_desc = __('Maximum number of recently used tables; set 0 to disable');
 $strConfigLeftRecentTable_name = __('Recently used tables');
 $strConfigLimitChars_desc = __('Maximum number of characters shown in any non-numeric column on browse view');
@@ -318,6 +316,8 @@ $strConfigNavigationTreeDbSeparator_name = __('Database tree separator');
 $strConfigNavigationTreeTableSeparator_desc = __('String that separates tables into different tree levels');
 $strConfigNavigationTreeTableSeparator_name = __('Table tree separator');
 $strConfigNavigationTreeTableLevel_name = __('Maximum table tree depth');
+$strConfigNavigationTreePointerEnable_desc = __('Highlight server under the mouse cursor');
+$strConfigNavigationTreePointerEnable_name = __('Enable highlighting');
 $strConfigRowActionLinks_desc = __('These are Edit, Copy and Delete links');
 $strConfigRowActionLinks_name = __('Where to show the table row links');
 $strConfigNaturalOrder_desc = __('Use natural order for sorting table and database names');
