@@ -59,6 +59,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + Renamed configuration directive: LeftFrameDBSeparator => NavigationTreeDbSeparator
 + Renamed configuration directive: LeftFrameTableSeparator => NavigationTreeTableSeparator
 + Renamed configuration directive: LeftFrameTableLevel => NavigationTreeTableLevel
++ Renamed configuration directive: LeftPointerEnable => NavigationTreePointerEnable
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
